# aad

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
aad/: __init__.py  _input_checks.py  calc_agreement_mat.py  construct_biadj_mat.py  datasets.py  detection.py  gen_adversary_labels.py  gen_annotator_labels.py  gen_confusion_mat.py  gen_gt_labels.py  typing.py
aad/aggregators/: dawid_skene.py  majority_voting.py  weighted_dawid_skene.py  weighted_majority_voting.py
aad/simulations/: __init__.py  gen_adversaries.py  gen_confusion_mat.py  gen_worker_labels.py
docs/api/: aggregators.md  datasets.md  index.md  simulations.md  typing.md
docs/javascripts/: mathjax.js
scripts/: commons.py  exp_n_adversaries.py  exp_n_targeted.py
tests/: test_aggregators.py  test_annotator_labels.py  test_confusion_mats.py  test_datasets.py  test_gen_adversary_labels.py  test_gt_labels.py  test_label_fusion.py  test_simulations.py
